--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,5 @@
 header{
-	width: 1000px;
-	height: 70px;
+	width: 100%;
 	background-color: #bbcccc;
 	margin-left: auto;
 	margin-right: auto;
@@ -21,29 +20,72 @@ header{
 	float: left;
 }
 
-#botonera_principal{
-	width: 575px;
-	height: 70px;
-	background-color: #bbcccc;
-	float: right;
+
+.menu-section{
+	margin-bottom: 1em;
+	border-bottom: 1px solid hsl(0, 0%); 
+
 }
 
+.menu ul{
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+    background: black;
+
+}
+.menu li a{
+	display: block;
+	text-decoration: none;
+	color: white;
+	padding: .6em 1em;
+
+}
+
+.menu li a:hover{
+	background: hsl(0 , 0% , 25%);
+}
+
+
+.botonera_principal ul{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.botonera_principal li{
+	flex: 1 0 auto;
+	text-align: center; 
+}
+
+.botonera_principal ul li a{
+    font-family: Tw Cen MT;
+    font-size: 1.5em;
+
+}
+
+#botonera_principal{
+	height: 70px;
+	background-color: #bbcccc;
+}
+
+/*
 nav ul{
-	list-style: none; /* saca los puntitos*/
+	list-style: none; saca los puntitos
 	margin: 0;
 	padding: 0;
 }
 
 nav ul li{
-	display: inline-block; /* lo muestra uno al lado del otro */
+	display: inline-block; 
 	text-shadow: 0px 1px #FFF
 }
 
 nav ul li a{
 	color: black;
-	text-decoration: none;/*le sacamos el subrayado*/
+	text-decoration: none;
 	display: block;
-	padding: 26px 20px;/*el alto y el ancho de cada boton respectivamente*/
+	padding: 26px 20px;
 	font-family: Arial, Helvetica , sans-serif;
 
 
@@ -52,10 +94,10 @@ nav ul li a{
 nav ul li a:hover{
 	color: #000;
 	background-color: white;
-}
+}*/
 
 section#Inicio{
-	width: 1000px;
+	width: 100%;
 	height: 1150px;
 	background-color: #bbcccc;
 	margin-left: auto;
@@ -65,9 +107,8 @@ section#Inicio{
 
 
 #presentacion{
-	width: 1000px;
+	width: 100%;
 	height: 600px;
-	background-color: #0b5924;
 	float: left;
 	margin-bottom: 10px;
 	background-image: url(img/fondo2.jpg);
@@ -86,21 +127,22 @@ section#Inicio{
 }
 
 #descripcion{
-	width: 500px;
-	height: 150px;
-	background-color: #dbf1e847;
-	float: left;
-	margin-bottom: 20px;
-	margin-top: 180px;
-	margin-left: 20px;
-	font-family: Tw Cen MT;
-	font-size: 25px;
-	text-align: center;
+	width: 50%;
+    height: 5em;
+    background-color: #dbf1e847;
+    /* float: left; */
+    margin-bottom: 20px;
+    margin-top: 400px;
+    margin-left: 20px;
+    font-family: Tw Cen MT;
+    font-size: 25px;
+    text-align: center;
+    padding-top: 1em;
 }
 
 
 #teoria_algebra{
-	width: 320px;
+	width: 25%;
 	height: 300px;
 	background-color: white;
 	float: left;
@@ -111,18 +153,20 @@ section#Inicio{
 
 #venn{
 	margin-top: 40px;
-	width: 320px;
+	width: 100%;
 	height:200px;
 }
 
 #contenido_teorico{
-	width: 400px;
+	width: 54%;
     height: 250px;
     float: left;
     margin-bottom: 40px;
     margin-top: 0px;
     font-family: Tw Cen MT;
-    font-size: 30px;
+	font-size: 30px;
+	border: 10px solid black;
+
 } 
 
 #texto{
@@ -137,7 +181,7 @@ section#Inicio{
 
 
 #programacion{
-	width: 260px;
+	width: 18%;
 	height: 300px;
 	background-color: white;
 	float: right;
@@ -145,7 +189,7 @@ section#Inicio{
 }
 
 #python{
-	width: 240px;
+	width: 100%;
 	height: 180px;
 	margin-left: 20px;
 	float: left;
@@ -153,19 +197,19 @@ section#Inicio{
 }
 
 #sql{
-	width: 260px;
+	width: 100%;
 	height: 120px;
 	float: left;
 
 }
 
 #imagen_aside{
-	width: 1000px;
+	width: 100%;
 	height: 250px;
 }
 
 footer{
-	width: 1000px;
+	width: 100%;
 	height: 180px;
 	background-color: #000000;
 	margin-left: auto;
@@ -176,7 +220,7 @@ footer{
 
 
 #datos{
-	width: 300px;
+	width: 50%;
 	height: 140px;
 	margin-left: 10px;
 	margin-top: 20px;
@@ -228,6 +272,8 @@ div ul li a{
 	padding: 5px;/*el alto y el ancho de cada boton respectivamente*/
 }
 
+/*Tablet*/
+
 @media all and (min-width: 600px) and (max-width: 1023px){
 	header{
 		width: 580px;
@@ -260,7 +306,7 @@ div ul li a{
 	
 	section#Inicio{
 		width: 580px;
-		height: 1110px;
+		height: auto;
 	}
 	
 	
@@ -294,33 +340,33 @@ div ul li a{
 	
 	
 	#teoria_algebra{
-		width: 320px;
-		height: 280px;
+		width: 100%;
+		height: auto;
 	}
 
 	#venn{
-		margin-top: 40px;
-		width: 320px;
-		height:200px;
+		width: 100%;
+		height:auto;
 	}
 
 	#contenido_teorico{
-		width: 250px;
-		height: 280px;
+		width: 96.5%;
+		height: auto;
 		font-size: 20px;
+		margin-bottom: 0px;
 	} 
 	
 	#texto{
-		margin-left: 10px;
-		margin-right: 10px;
+		margin-left: 0px;
+		margin-right: 0px;
 		margin-top: 0px;
 		font-size: 25px;
 	
 	}
 	
 	#programacion{
-		width: 580px;
-		height: 180px;
+		width: 0%;
+		height: 0%;
 		float: left;
 	}
 
@@ -332,7 +378,7 @@ div ul li a{
 	}
 	
 	#imagen_aside{
-		width: 580px;
+		width: 100%;
 		height: 0px;
 	}
 	
@@ -348,7 +394,6 @@ div ul li a{
 	}
 	
 	#redes{
-		width: 200px;
 		height: 40px;
 		background-color: black;
 		padding: 0px;
@@ -483,7 +528,7 @@ div ul li a{
 	}
 	
 	#contenido_teorico{
-		width: 100%;
+		width: 92%;
 		height: auto;
 		float: none;
 		margin-left: auto;
