--- a/formulario.css
+++ b/formulario.css
@@ -1,58 +1,52 @@
 
-header{
-	width: 1000px;
-	height: 70px;
-	background-color: #bbcccc;
-	margin-left: auto;
-	margin-right: auto;
+#color{
+    background-color: #bbcccc;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.menu-section{
+	margin-bottom: 1em;
+    border-bottom: 1px solid hsl(0, 0%); 
 
 }
 
-#nombre{
-	width: 425px;
-	height: 70px;
-	background-color: #edf2f2;
-	float: left;
-}
-
-#logo{
-	width: 425px;
-	height: 70px;
-	background-color: #edf2f2;
-	float: left;
-}
-
-#botonera_principal{
-	width: 575px;
-	height: 70px;
-	background-color: #bbcccc;
-	float: right;
-}
-
-nav ul{
-	list-style: none; 
-	margin: 0;
+.menu ul{
+	list-style-type: none;
 	padding: 0;
-}
+	margin: 0;
+    background: black;
 
-nav ul li{
-	display: inline-block; 
-	text-shadow: 0px 1px #FFF
 }
-
-nav ul li a{
-	color: black;
-	text-decoration: none;
+.menu li a{
 	display: block;
-	padding: 26px 20px;
-	font-family: Arial, Helvetica , sans-serif;
+	text-decoration: none;
+	color: white;
+	padding: .6em 1em;
+
 }
 
-nav ul li a:hover{
-	color: #000;
-	background-color: white;
+.menu li a:hover{
+	background: hsl(0 , 0% , 25%);
 }
 
+
+.botonera_principal ul{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.botonera_principal li{
+	flex: 1 0 auto;
+	text-align: center; 
+}
+
+.botonera_principal ul li a{
+    font-family: Tw Cen MT;
+    font-size: 1.5em;
+
+}
 
 body {
     font-family: Tw Cen MT;
@@ -60,22 +54,13 @@ body {
 }
 
 section#Contacto{
-	width: 1000px;
-	height: 530px;
+	height: auto;
 	background-color: #bbcccc;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 15px;
+	margin-right: 15px;
 	
 }
 
-#frase{
-	width: 400px;
-    height: 30px;
-    float: left;
-    font-family: Tw Cen MT;
-    font-size: 28px;
-    padding: 20px;
-}
 
 
 .formulario{
@@ -132,37 +117,23 @@ section#Contacto{
 
 }
 
+a:link{
+	text-decoration: none;
+	}
+	a:visited{
+		text-decoration: none;
+	}
+	
+	a:active {
+		text-decoration: none;
+	}
+	
+	/* posiciono el mouse*/
+	a:hover{
+	text-decoration: none;
+	}
 
 @media all and (min-width: 600px) and (max-width: 1023px){
-	header{
-		width: 580px;
-		height: 140px;
-	}
-	
-	#nombre{
-		width: 580px;
-		height: 70px;
-		float: none;
-		margin-left: auto;
-		margin-right: auto;
-	}
-	
-	#logo{
-		width: 580px;
-		height: 70px;
-		float: none;
-		margin-left: auto;
-		margin-right: auto;
-	}
-	
-	#botonera_principal{
-		width: 580px;
-		height: 70px;
-		float: none;
-		margin-left: auto;
-		margin-right: auto;
-	}
-	
 	
 	section#Contacto{
 		width: 580px;
@@ -221,55 +192,6 @@ section#Contacto{
 /*Celulares*/
 
 @media all and (max-width: 599px){
-	header{
-		width: 90%;
-		height: auto;
-	}
-	
-	#nombre{
-		width: 100%;
-		height: auto;
-		float: none;
-		box-sizing: border-box;
-	}
-	
-	#logo{
-		width: 100%;
-		height: auto;
-		float: none;
-		margin-left: auto;
-		margin-right: auto;
-	}
-	
-	#botonera_principal{
-		width: 100%;
-		height: auto;
-		float: none;
-		margin-top: 0px;
-	}
-
-	nav ul{
-		list-style: none; /* saca los puntitos*/
-		margin: 0;
-		padding: 0;
-	}
-	
-	nav ul li{
-		display: block;
-		text-shadow: 0px 1px #FFF
-	}
-	
-	nav ul li a{
-		width: 100%;
-		box-sizing: border-box;
-		text-align: center;
-		margin-bottom: 5px;
-		display: inline-block;
-		padding: 20px 20px;/*el alto y el ancho de cada boton respectivamente*/
-		font-family: Arial, Helvetica , sans-serif;
-	
-	
-	}
 	
 	
 	section#Contacto{
