--- a/ejercicios.css
+++ b/ejercicios.css
@@ -1,6 +1,7 @@
 section#EJ{
 	width: 100%;
 	background-color: #bbcccc;
+	padding-bottom: 1em;
 
 	
 }
@@ -99,24 +100,9 @@ section#EJ{
 }
 
 .pdf{
-	width: 95%;
-	border: 10px solid black;
-	margin: auto;
-	font-size: 2em;
-	line-height: 50px;
-	text-align: center;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; /* en vez de repetir pongo repeat(4,1fr)*/
-	grid-template-rows: 1fr;
-}
-
-.ejerpdf > a{
-	font-family: Tw Cen MT;
-	font-size: 0.5em;
-	text-decoration: none;
-}
-
-.pdf > div{
+	border: 2px solid black;
+    margin: auto;
+	font-size: 1.2em;
 	display: block;
 	color: white;
 	padding: 0.2em;
@@ -124,38 +110,28 @@ section#EJ{
 	box-shadow: 2px 2px 10px white;	
 }
 
-	
 
+	
 
 footer{
 	width: 100%;
-	height: 11.25em;
+	height: auto;
 	background-color: #000000;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 
-
-
-#datos{
-	width: 18.75em;
-	height: 8.75em;
-	margin-left: 10px;
-	margin-top: 20px;
-	float: left;
-}
-
-#links{width: 18.75em;
-	height: 0.625em;
+#links{
+    width: 300px;
+	height: 10px;
 	font-family: Arial;
-	font-size: 0.938em;
+    font-size: 15px;
+    margin-top: 2em;
 
 }
 
 #mate{
 	font-family: Arial;
-	font-size: 0.938em;
+	font-size: 15px;
 	float: left;
 
 }
@@ -168,13 +144,10 @@ footer{
 }
 
 #redes{
-	width: 200px;
-	height: 40px;
 	background-color: black;
 	padding: 0px;
 	float: right;
 }
-
 
 div ul{
     display: flex;
@@ -212,4 +185,42 @@ a:active {
 /* posiciono el mouse*/
 a:hover{
 text-decoration: none;
+}
+
+@media all and (min-width: 600px) and (max-width: 1023px){
+
+	#nombre{
+		width: 580px;
+		height: 70px;
+		float: none;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	
+	#logo{
+		width: 580px;
+		height: 70px;
+		float: none;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+
+@media all and (max-width: 599px){
+
+	#nombre{
+		width: 100%;
+		height: auto;
+		float: none;
+		box-sizing: border-box;
+	}
+
+	#logo{
+		width: 100%;
+		height: auto;
+		float: none;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	
 }
