--- a/practicas.css
+++ b/practicas.css
@@ -21,7 +21,8 @@
 	display: block;
 	text-decoration: none;
 	color: white;
-	padding: .6em 1em;
+    padding: .6em 1em;
+    
 
 }
 
@@ -47,37 +48,20 @@
 
 }
 
-.lista{
-    display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-}
-
-
 
 footer{
 	width: 100%;
-	height: 180px;
+	height: auto;
 	background-color: #000000;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 
-
-
-#datos{
-	width: 50%;
-	height: 140px;
-	margin-left: 10px;
-	margin-top: 20px;
-	float: left;
-}
-
-#links{width: 300px;
+#links{
+    width: 300px;
 	height: 10px;
 	font-family: Arial;
-	font-size: 15px;
+    font-size: 15px;
+    margin-top: 2em;
 
 }
 
@@ -96,8 +80,6 @@ footer{
 }
 
 #redes{
-	width: 200px;
-	height: 40px;
 	background-color: black;
 	padding: 0px;
 	float: right;
@@ -106,12 +88,17 @@ footer{
 
 
 div ul{
+    display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 	text-align: center; /* saca los puntitos*/
 	padding-top: 30px;
 	padding-bottom: 30px;
 }
 
 div ul li{
+    flex: 1 0 auto;
+	text-align: center; 
 	display: inline-block; /* lo muestra uno al lado del otro */
 }
 
@@ -133,4 +120,43 @@ a:link{
 	/* posiciono el mouse*/
 	a:hover{
 	text-decoration: none;
-	}
+    }
+    
+
+    @media all and (min-width: 600px) and (max-width: 1023px){
+
+        #nombre{
+            width: 580px;
+            height: 70px;
+            float: none;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        
+        #logo{
+            width: 580px;
+            height: 70px;
+            float: none;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+
+    @media all and (max-width: 599px){
+
+        #nombre{
+            width: 100%;
+            height: auto;
+            float: none;
+            box-sizing: border-box;
+        }
+    
+        #logo{
+            width: 100%;
+            height: auto;
+            float: none;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        
+    }
